plugins {
    id 'com.android.application'
}

android {
    compileSdk 35
    namespace 'com.wigig.poc'

    defaultConfig {
        minSdk 26
        targetSdk 28
        versionCode 1
        versionName "1.0"
        multiDexEnabled false

        externalNativeBuild {
            ndkBuild {
            }
        }

        ndk {
            abiFilters 'arm64-v8a'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    
    buildFeatures {
        aidl true
    }

    externalNativeBuild {
        ndkBuild {
            path file("src/main/cpp/Android.mk")
        }
    }


    signingConfigs {
        release {
            storeFile file('test.jks')
            storePassword 'test1234'
            keyAlias 'key0'
            keyPassword 'test1234'
        }
    }

    buildTypes {
        debug {
            debuggable true
            jniDebuggable true
            signingConfig signingConfigs.debug
        }
        release {
            debuggable true
            jniDebuggable true
            minifyEnabled false
            shrinkResources false
            signingConfig file('release.jks').exists() ? signingConfigs.release : signingConfigs.debug
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    sourceSets {
        main {
            aidl.srcDirs = ['src/main/aidl']
        }
    }

    packagingOptions {
        resources {
            excludes += ['META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/NOTICE']
        }
    }

    lint {
        disable 'ExpiredTargetSdkVersion', 'NewApi', 'Range', 'SetTextI18n', 'ScopedStorage', 'FieldCanBeLocal', 'GradleDependency'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
}
